--- a/style/sobremim.css
+++ b/style/sobremim.css
@@ -13,7 +13,7 @@ body {
     height: 100vh;
 
     /* Cria um gradiente de cores de cima para baixo como plano de fundo */
-    background: linear-gradient(to bottom, #87CEEB, #ADD8E6);
+    background: linear-gradient(to bottom, #87CEEB, #39abd1);
 
     /* Define o tamanho de fundo para cobrir toda a área disponível */
     background-size: cover;
@@ -129,7 +129,7 @@ body {
     left: 0;
     width: 100%;
     color: white;
-    background-color: #574f9e;
+    background-color: #463d9c;
     display: flex;
     align-items: center;
     justify-content: center;
