--- a/style/sobremim.css
+++ b/style/sobremim.css
@@ -129,7 +129,7 @@ body {
     left: 0;
     width: 100%;
     color: white;
-    background-color: #463d9c;
+    background-color: #574f9e;
     display: flex;
     align-items: center;
     justify-content: center;
