--- a/style/style.css
+++ b/style/style.css
@@ -580,7 +580,7 @@ body {
     left: 0;
     width: 100%;
     color: white;
-    background-color: #463d9c;
+    background-color: #574f9e;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -593,7 +593,7 @@ body {
 
 /* Estilo de link no rodapé */
 .rodape a:hover {
-    color: #29b3dd;
+    color: #59c3d1;
 }
 
 
